# psoc

./: .gitignore  .rustfmt.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml  preferences.ron  project_op.md  project_report.md
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  rust.yml
benches/: image_processing.rs
crates/psoc-core/: Cargo.toml
crates/psoc-core/src/: adjustment.rs  color.rs  command.rs  document.rs  geometry.rs  gradient.rs  icc.rs  layer.rs  lib.rs  math.rs  pixel.rs  rendering.rs  selection.rs  smart_object.rs
crates/psoc-core/src/adjustments/: brightness.rs  color_balance.rs  contrast.rs  curves.rs  grayscale.rs  hsl.rs  levels.rs  mod.rs
crates/psoc-core/src/adjustments/filters/: blur.rs  mod.rs  noise.rs  sharpen.rs
crates/psoc-file-formats/: Cargo.toml
crates/psoc-file-formats/src/: jpeg.rs  lib.rs  png.rs  project.rs
crates/psoc-image-processing/: Cargo.toml
crates/psoc-image-processing/src/: lib.rs
crates/psoc-plugins/: Cargo.toml
crates/psoc-plugins/src/: api.rs  lib.rs  lua.rs  manager.rs  wasm.rs
crates/psoc-ui-toolkit/: Cargo.toml
crates/psoc-ui-toolkit/src/: lib.rs
crates/psoc-ui-toolkit/src/layouts/: mod.rs
crates/psoc-ui-toolkit/src/themes/: mod.rs
crates/psoc-ui-toolkit/src/widgets/: mod.rs
docs/: P1.3-completion-report.md  P1.4-completion-report.md  P1.5-completion-report.md  P1.6-completion-report.md  P2.1-completion-report.md  P2.2-completion-report.md  P2.3-completion-report.md  P2.4-completion-report.md  P3.1-completion-report.md  P3.2-completion-report.md  P3.3-completion-report.md  P3.4-completion-report.md  P3.5-completion-report.md  P3.6-completion-report.md  P4.4-completion-report.md  P4.5-completion-report.md  P4.5-final-summary.md  P4.6-completion-report.md  P5.1-report.md  P5.2-completion-report.md  P5.3-completion-report.md  P5.3-final-summary.md  P5.4-completion-report.md  P5.4-final-summary.md  P5.5-completion-report.md  P5.6-completion-report.md  P5.7-completion-report.md  P5.7-final-summary.md  P6.1-completion-report.md  P6.1-final-summary.md  P6.2-completion-report.md  P6.3-final-summary.md  P6.4-completion-report.md  P6.4-final-summary.md  P6.5-completion-report.md  P6.5-final-summary.md  P6.5-summary.md  P6.6-report.md  P6.6-summary.md  P6.7-completion-report.md  (+60 more)
docs/design/: dashboard.html
docs/reports/: P6.3-report.md  UI-Phase1-report.md  test-report-P5.5.md  test-report-P5.6.md  test-report-P6.2.md  test-report-P6.6.md  test-report-P7.1.md  test-report-P7.2.md  test-report-P8.1.md  test-report-P8.3.md  test-report-P8.5.md  test-report-P8.6.md  test-report-p4.1.md  test-report-p4.2.md  test-report-p4.5.md  test-report-p5.2.md  test-report-p5.3.md  test-report-p5.7.md
examples/: basic_usage.rs  file_io_demo.rs  phase2_demo.rs  phase2_simple_demo.rs  phase3_demo.rs  phase4_i18n_demo.rs  selection_demo.rs
resources/i18n/: en.ftl  zh-cn.ftl
scripts/: generate_icons.sh  package.sh
scripts/package/: linux.sh  macos.sh  windows.ps1
src/: lib.rs  main.rs
src/app/: mod.rs
src/commands/: adjustment_commands.rs  crop_commands.rs  layer_commands.rs  mod.rs  paint_commands.rs  selection_commands.rs  smart_object_commands.rs  transform_commands.rs
src/core/: mod.rs
src/file_io/: export.rs  import.rs  mod.rs  tests.rs
src/i18n/: enhanced.rs  migration.rs  mod.rs
src/image_processing/: mod.rs
src/plugins/: mod.rs
src/preferences/: mod.rs
src/rendering/: mod.rs
src/shortcuts/: keyboard_events.rs  mod.rs  shortcut_manager.rs  shortcut_types.rs
src/tools/: mod.rs  tool_manager.rs  tool_trait.rs  tools.rs
src/ui/: application.rs  canvas.rs  components.rs  fonts.rs  icons.rs  mod.rs  theme.rs
src/ui/animations/: easing.rs  enhanced_tool_animations.rs  menu_animations.rs  mod.rs  modern_menu_animations.rs  status_animations.rs  tool_options_animations.rs  toolbar_animations.rs  transitions.rs
src/ui/components/: adaptive_toolbar.rs  animated_tool_options.rs  keyboard_navigation.rs  menu_factory.rs  menu_system.rs  mod.rs  modern_canvas_placeholder.rs  modern_color_panel.rs  modern_layer_panel.rs  modern_menu.rs  modern_menu_bar.rs  modern_status_panel.rs  responsive_layout.rs  smart_panel_system.rs
src/ui/design_system/: accessibility.rs  borders.rs  colors.rs  mod.rs  spacing.rs
src/ui/dialogs/: about.rs  brightness_contrast.rs  color_palette.rs  color_picker.rs  gaussian_blur.rs  gradient_editor.rs  mod.rs  preferences.rs
src/ui/performance/: caching.rs  memory.rs  mod.rs  rendering.rs
src/ui/styles/: glass_effects.rs  gradient_system.rs  menu_styles.rs  mod.rs  modern_canvas_styles.rs  modern_containers.rs  modern_menu_styles.rs  shadow_system.rs  visual_effects.rs
src/utils/: error.rs  logging.rs  mod.rs
tests/: adjustment_layer_tests.rs  blend_mode_ui_tests.rs  color_picker_tests.rs  debug_embedded_resources.rs  enhanced_i18n_test.rs  history_panel_tests.rs  i18n_tests.rs  i18n_translation_test.rs  integration_tests.rs  mask_editing_tests.rs  packaging_tests.rs  phase2_minimal_test.rs  phase2_standalone_test.rs  phase3_basic_test.rs  phase4_i18n_test.rs  rulers_grid_guides_tests.rs  shortcuts_tests.rs  simple_i18n_test.rs  smart_object_tests.rs  status_info_tests.rs  tool_options_tests.rs
tests/integration/: file_io_integration_tests.rs  mod.rs  performance_tests.rs  rendering_tests.rs  ui_tests.rs
tests/ui/: menu_system_tests.rs  phase2_compilation_test.rs  phase3_integration_tests.rs  visual_effects_tests.rs
wix/: main.wxs
