[package]
name = "psoc-core"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "Core data structures and algorithms for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Math and arrays
ndarray = { version = "0.16", features = ["serde"] }
glam = "0.30.3"
nalgebra = "0.33"

# Image processing
image = { version = "0.25.6", features = ["png", "jpeg", "tiff", "webp"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# UUID for unique identifiers
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Parallel processing
rayon = "1.10.0"

# Logging and tracing
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"