[package]
name = "psoc-file-formats"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "File format support for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
psoc-core = { path = "../psoc-core" }
