[package]
name = "psoc-file-formats"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "File format support for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
# Image processing
image = { version = "0.25.6", features = ["png", "jpeg", "tiff", "webp"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ron = "0.10.1"

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Workspace crates
psoc-core = { path = "../psoc-core" }

[dev-dependencies]
tempfile = "3.20.0"
