[package]
name = "psoc-ui-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "UI toolkit and components for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
psoc-core = { path = "../psoc-core" }
