[package]
name = "psoc-ui-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "UI toolkit and components for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
# GUI framework
iced = { version = "0.10", features = ["canvas", "image", "svg", "tokio"] }

# Image processing
image = { version = "0.24", features = ["png", "jpeg", "tiff", "webp"] }

# Math
glam = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Workspace crates
psoc-core = { path = "../psoc-core" }
