[package]
name = "psoc-ui-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["PSOC Development Team <dev@psoc.project>"]
description = "UI toolkit and components for PSOC"
license = "MIT OR Apache-2.0"

[dependencies]
# GUI framework
iced = { version = "0.13.1", features = ["canvas", "image", "svg", "tokio"] }

# Image processing
image = { version = "0.25.6", features = ["png", "jpeg", "tiff", "webp"] }

# Math
glam = "0.30.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"

# Workspace crates
psoc-core = { path = "../psoc-core" }
